changed: reduce image weight 225MB->92MB